force-app/main/default/objects/Job_Posting__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digi Customer</fullName>
            </value>
            <value>
                <fullName>Digi Consumer for Consulting</fullName>
            </value>
            <value>
                <fullName>Digi Tax</fullName>
            </value>
            <value>
                <fullName>Enterprise Tax for Tax</fullName>
            </value>
            <value>
                <fullName>Small Org</fullName>
            </value>
            <value>
                <fullName>Enterprise for Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>