force-app/main/default/objects/Job_Posting__c/fields/Skillset__c.field-meta.xml
<CustomField>
    <fullName>Skillset__c</fullName>
    <label>Skillset</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>